--- a/index3.html
+++ b/index3.html
@@ -17,6 +17,7 @@ async function run_it() {
   
   var n = 5;
   var S = Array.from({length: n}, (_,i) => i+1);
+    console.log('S: ', S);
   var a = [];
 
     console.log('Math.min(S): ', Math.min(S));
