--- a/index3.html
+++ b/index3.html
@@ -30,7 +30,7 @@ async function run_it() {
         a = a.concat(temp);
 
         // Create b
-        let temp_b = Array.from({length: n-i}, (_,index) => index+(i+1);
+        let temp_b = Array.from({length: n-i}, (_,index) => index+(i+1));
         b = b.concat(temp_b);
     }
     console.log('a: ', a);
