--- a/index3.html
+++ b/index3.html
@@ -42,7 +42,8 @@ async function run_it() {
     var binary_str;
     var decimal_num;
     var decimal_arr = [];
-    for (let i=0; i<a.length; i++) {
+    // for (let i=0; i<a.length; i++) {
+    for (let i=0; i<2; i++) {
         bin_a_str = await convert_decimal_to_binary(a.at(i));
         console.log('bin_a_str: ', bin_a_str);
         
