--- a/index3.html
+++ b/index3.html
@@ -92,14 +92,21 @@ async function convert_decimal_to_binary(decimal_num) {
     var binary_number = [];
     var decimal_num2 = Math.floor(decimal_num/2);
     console.log('decimal_num2: ', decimal_num2);
-                
+
+    
     while (decimal_num2 >= 0) {
         if (decimal_num % 2 != 0) {
             binary_number.push(1);
         } else {
             binary_number.push(0);
         }
-        decimal_num2 = Math.floor(decimal_num2/2);
+
+        // reassign decimal_num2
+        if (decimal_num2 == 0) {
+            decimal_num2 = -1; // to stop loop
+        } else {
+            decimal_num2 = Math.floor(decimal_num2/2);
+        }
         console.log('decimal_num2: ', decimal_num2);
     }
     // concatenate the remainder bits from most to least significant (ie: (71)_10 = (1000111)_2 )
