--- a/index3.html
+++ b/index3.html
@@ -123,7 +123,7 @@ async function convert_decimal_to_binary(decimal_num) {
 async function convert_decimal_to_binary1(decimal_num) {
 
     // convert base-10 (decimal) to base-2 (binary)
-    var binary_number = [];
+    var binary_number = "";
     var decimal_num2 = Math.floor(decimal_num/2);
     console.log('decimal_num: ', decimal_num);
     console.log('decimal_num2: ', decimal_num2);
@@ -131,9 +131,9 @@ async function convert_decimal_to_binary1(decimal_num) {
     while (decimal_num != 0) {
         if (decimal_num % 2 == 0) {
             // There is no remainder if (decimal_num % 2 == 0), put 0
-            binary_number.push(0);
+            binary_number += "0";
         } else {
-            binary_number.push(1);
+            binary_number += "1";
         }
         decimal_num = decimal_num2;
         decimal_num2 = Math.floor(decimal_num/2);
@@ -141,7 +141,7 @@ async function convert_decimal_to_binary1(decimal_num) {
         console.log('decimal_num2: ', decimal_num2);
     }
     // concatenate the remainder bits from most to least significant (ie: (71)_10 = (1000111)_2 )
-    return binary_number.join('');
+    return binary_number;
 }
 
     
