--- a/index3.html
+++ b/index3.html
@@ -110,6 +110,7 @@ async function run_it() {
         max_num = decimal_arr.pop();
         max_loop_num += 1;
     }
+    console.log('max_num: ', max_num);
     return max_num;
 }
 
