--- a/index4.html
+++ b/index4.html
@@ -50,7 +50,10 @@ async function run_it() {
     console.log('decimal_arr: ', decimal_arr);
     
     const is_less_than_k = (num) => num < k;
-    const max_num = Math.max(decimal_arr.filter(is_less_than_k));
+    var out1 = decimal_arr.filter(is_less_than_k);
+    console.log('out1: ', out1);
+    
+    const max_num = out1.sort().pop();
     console.log('max_num: ', max_num);
 
     // var max_num = decimal_arr.sort().pop();
