--- a/index4.html
+++ b/index4.html
@@ -15,7 +15,21 @@ window.onload = async (event) => { await run_it(); };
 async function run_it() {
     var n = 9;
     var k = 2;
-    var max_num = await getMaxLessThanK2(n, k);
+    //var max_num = await getMaxLessThanK2(n, k);
+    //console.log('max_num:', max_num);
+    var decimal_arr = [];
+    for (let i=1; i < n; i++) {
+        for (let j=0; j>(n-i);j++) {
+            let out = i & (i+1)+j;
+            console.log('out: ', out)
+            
+            if (out < k) {
+                decimal_arr.push(out);
+            }
+        }
+    }
+
+    var max_num = decimal_arr.sort().pop();
     console.log('max_num:', max_num);
 }
 
