--- a/index5.html
+++ b/index5.html
@@ -15,15 +15,13 @@
             <button id='btnDiv' class='buttonClass'>/</button>
         </div>
 
-
-
 <style>
             .body { width: 33%; }
             .div#res { background-color: lightgray; border: solid; height: 48px; font-size: 20px; display: block; }
             .buttonContainer { width: 148px; }
-            .buttonContainer > .buttonClass { width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left }
+            .buttonContainer > .buttonClass { width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left; }
 
-            .buttonClass#btn0 { background-color: lightgreen; color: brown; }
+            .buttonClass#btn0 { width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left; background-color: lightgreen; color: brown; }
             .buttonClass#btn1 { background-color: lightgreen; color: brown; }
             
             .buttonClass#btnClr { background-color: darkgreen; color: white; }
