--- a/index5.html
+++ b/index5.html
@@ -3,7 +3,7 @@
     <head></head>
     
     <body>
-        <div id='res'></div>
+        <div id='res' style="background-color: lightgray; border: solid; height: 48px; font-size: 20px; display:block;"></div>
         <div id='btns' class='buttonContainer'>
             <button id='btn0' class='buttonClass'>0</button>
             <button id='btn1' class='buttonClass'>1</button>
@@ -17,11 +17,11 @@
 
 <style>
             .body { width: 33%; }
-            .div#res { background-color: lightgray; border: solid; height: 48px; font-size: 20px; display: block; }
+            .div#res { background-color: lightgray; border: solid; height: 48px; font-size: 20px; display:block; }
             .buttonContainer { width: 148px; }
             .buttonContainer > .buttonClass { width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left; }
 
-            .buttonClass#btn0 { width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left; background-color: lightgreen; color: brown; }
+            .buttonClass#btn0 { background-color: lightgreen; color: brown; }
             .buttonClass#btn1 { background-color: lightgreen; color: brown; }
             
             .buttonClass#btnClr { background-color: darkgreen; color: white; }
