--- a/index5.html
+++ b/index5.html
@@ -2,7 +2,7 @@
 <html>
     <head></head>
     
-    <body>
+    <body style="width: 33%;">
         <div id='res' style="background-color: lightgray; border: solid; height: 48px; font-size: 20px; display:block;"></div>
         <div id='btns' class='buttonContainer'>
             <button id='btn0' class='buttonClass'>0</button>
