--- a/index5.html
+++ b/index5.html
@@ -4,22 +4,22 @@
     
     <body style="width: 33%;">
         <div id='res' style="background-color: lightgray; border: solid; height: 48px; font-size: 20px; display:block;"></div>
-        <div id='btns' class='buttonContainer' style="width: 148px;">
-            <button id='btn0' class='buttonClass' style="width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left;">0</button>
-            <button id='btn1' class='buttonClass' style="width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left;">1</button>
-            <button id='btnClr' class='buttonClass' style="width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left;">C</button>
-            <button id='btnEql' class='buttonClass' style="width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left;">=</button>
-            <button id='btnSum' class='buttonClass' style="width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left;">+</button>
-            <button id='btnSub' class='buttonClass' style="width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left;">-</button>
-            <button id='btnMul' class='buttonClass' style="width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left;">*</button>
-            <button id='btnDiv' class='buttonClass' style="width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left;">/</button>
+        <div id='btns' class='buttonContainer'>
+            <button id='btn0' class='buttonClass'>0</button>
+            <button id='btn1' class='buttonClass'>1</button>
+            <button id='btnClr' class='buttonClass'>C</button>
+            <button id='btnEql' class='buttonClass'>=</button>
+            <button id='btnSum' class='buttonClass'>+</button>
+            <button id='btnSub' class='buttonClass'>-</button>
+            <button id='btnMul' class='buttonClass'>*</button>
+            <button id='btnDiv' class='buttonClass'>/</button>
         </div>
 
 <style>
             .body { width: 33%; }
             .div#res { background-color: lightgray; border: solid; height: 48px; font-size: 20px; display:block; }
             .buttonContainer { width: 148px; }
-            .buttonContainer > .buttonClass { width: 25%; height: 36px; font-size: 18px; margin: 0px; float: left; }
+            .buttonContainer > .buttonClass { width: 30%; height: 36px; font-size: 18px; margin: 0px; float: left; }
 
             .buttonClass#btn0 { background-color: lightgreen; color: brown; }
             .buttonClass#btn1 { background-color: lightgreen; color: brown; }
