--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,9 @@
 
 
 <script type="importmap">
-  { "imports": {
-    "library_to_run_github_actions": "https://cdn.jsdelivr.net/npm/library_to_run_github_actions@1.0.1/index.min.js",
+  { 
+    "imports": {
+      "library_to_run_github_actions": "https://cdn.jsdelivr.net/npm/library_to_run_github_actions@1.0.1/index.min.js"
     }
   }
 </script>
