--- a/index2.html
+++ b/index2.html
@@ -25,16 +25,22 @@ async function run_selection(url, options) {
   var settings = {
 		type : 'GET',
 		url: url,
-      dataType: 'jsonp',
-      async: true, // this is by default false, so not need to mention
-      crossDomain: true
+		dataType: 'jsonp',
+		async: true,
+		crossDomain: true,
+		success: function(response) { console.log(response); },
+		error: function(xhr, status, error) { console.log('Error:', error); }
 	};
 
   $.ajax(settings).done(function(response) { console.log('response: ', response); })
 
+// OpaqueResponseBlocking error occurs because the browser blocks the response due to cross-origin restrictions. This typically happens when the requested resource is on a different domain or protocol than the origin of the request.
+	
 }
 
 
+
+	
 </script>
 
 
