--- a/index2.html
+++ b/index2.html
@@ -13,19 +13,17 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<script type="text/javascript" crossorigin>
-function func_callback(response) {
-  var meta = response.meta;
-  var data = response.data;
-  console.log(meta);
-  console.log(data);
-}
-
-var script = document.createElement('script');
-script.src = `https://nominatim.openstreetmap.org/search?q=${document.getElementById('location_name').innerHTML}&format=json?callback=func_callback`
-
-document.getElementsByTagName('head')[0].appendChild(script);
-</script>
+<!-- <script type="text/javascript" crossorigin> -->
+<!-- function func_callback(response) { -->
+<!--   var meta = response.meta; -->
+<!--   var data = response.data; -->
+<!--   console.log(meta); -->
+<!--   console.log(data); -->
+<!-- } -->
+<!-- var script = document.createElement('script'); -->
+<!-- script.src = `https://nominatim.openstreetmap.org/search?q=${document.getElementById('location_name').innerHTML}&format=json?callback=func_callback` -->
+<!-- document.getElementsByTagName('head')[0].appendChild(script); -->
+<!-- </script> -->
 
 <script>
 	
