--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,8 @@
 
 <input id="location_name" type="text" value="" placeholder="location_name" rows="10" cols="100" style="display:block; text-align: left; width: 600px;">
 
-<button id="run_selection" onclick="run_selection()">Run Selection</button>
-
+<button id="run_selection_w_JSONP" onclick="run_selection_w_JSONP()">run_selection_w_JSONP</button>
+<button id="run_selection_w_CORS" onclick="run_selection_w_CORS()">run_selection_w_CORS</button>
 
 	
 <!-- <script src='https://code.jquery.com/jquery-3.6.3.min.js'></script> -->
@@ -33,15 +33,41 @@ window.addEventListener('beforeunload', function() {
     window.location.href = window.location.href + '?nocache=' + new Date().getTime();
 });
 
+// -----------------------------------------------
 
-async function run_selection(url, options) {
+var url = `https://nominatim.openstreetmap.org/search?q=${document.getElementById('location_name').innerHTML}&format=json`;
 
-  var url = `https://nominatim.openstreetmap.org/search?q=${document.getElementById('location_name').innerHTML}&format=json`;
-
-  var settings = {
-		type : 'GET',
+// -----------------------------------------------
+	
+async function run_selection_w_JSONP() {
+	
+	var settings = {
+		type: 'GET',
 		url: url,
 		dataType: 'jsonp',
+		jsonpCallback: 'myCallBackMethod',
+		async: false, // this is by default false, so not need to mention
+		crossDomain: true // tell the browser to allow cross domain calls.
+		// success: successResopnse, jsonpCallback will call the successCallback
+		// error: failureFunction jsonp does not support errorCallback. So cannot use this 
+	};
+	
+	$.ajax(settings);
+
+	window.myCallBackMethod = function(data) { successResponse(data); }
+		 
+	successResponse = function(data) { console.log("response: ", response); }
+
+}
+
+// -----------------------------------------------
+	
+async function run_selection_w_CORS() {
+
+  var settings = {
+		url: url,
+		type : 'GET',
+		dataType: 'json',
 		async: true,
 		crossDomain: true,
 		success: function(response) { console.log(response); },
@@ -55,14 +81,9 @@ async function run_selection(url, options) {
 // jQuery363000451280049135816_1720786311751 was not called
 }
 
+// -----------------------------------------------
 
-
-	
 </script>
-
-
-
-
 
   
 </body>
