--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<!-- <script type="text/javascript" crossorigin> -->
+<!-- <script type="text/javascript" crossorigin="anonymous"> -->
 <!-- function func_callback(response) { -->
 <!--   var meta = response.meta; -->
 <!--   var data = response.data; -->
@@ -21,7 +21,7 @@
 <!--   console.log(data); -->
 <!-- } -->
 <!-- var script = document.createElement('script'); -->
-<!-- script.src = `https://nominatim.openstreetmap.org/search?q=${document.getElementById('location_name').innerHTML}&format=json?callback=func_callback` -->
+<!-- script.src = `https://nominatim.openstreetmap.org/search?q=${document.getElementById('location_name').innerHTML}&format=json?callback=` -->
 <!-- document.getElementsByTagName('head')[0].appendChild(script); -->
 <!-- </script> -->
 
@@ -38,8 +38,15 @@ window.addEventListener('beforeunload', function() {
 var url = `https://nominatim.openstreetmap.org/search?q=${document.getElementById('location_name').innerHTML}&format=json`;
 
 // -----------------------------------------------
+
+// function() {
+// 
+// }
 	
-async function run_selection_w_JSONP() {
+// -----------------------------------------------
+
+	
+function run_selection_w_JSONP() {
 	
 	var settings = {
 		type: 'GET',
@@ -57,6 +64,8 @@ async function run_selection_w_JSONP() {
 	window.myCallBackMethod = function(data) { successResponse(data); }
 		 
 	successResponse = function(data) { console.log("response: ", response); }
+
+	myCallBackMethod({"place_id":108560795,"licence":"Data © OpenStreetMap contributors, ODbL 1.0. http://osm.org/copyright","osm_type":"relation","osm_id":120965,"lat":"45.7578137","lon":"4.8320114","class":"boundary","type":"administrative","place_rank":16,"importance":0.6913775965432666,"addresstype":"city","name":"Lyon","display_name":"Lyon, Métropole de Lyon, Rhône, Auvergne-Rhône-Alpes, Metropolitan France, France","boundingbox":["45.7073666","45.8082628","4.7718134","4.8983774"]})
 
 }
 
@@ -76,9 +85,6 @@ async function run_selection_w_CORS() {
 
   $.ajax(settings).done(function(response) { console.log('response: ', response); })
 
-// OpaqueResponseBlocking error occurs because the browser blocks the response due to cross-origin restrictions. This typically happens when the requested resource is on a different domain or protocol than the origin of the request.
-
-// jQuery363000451280049135816_1720786311751 was not called
 }
 
 // -----------------------------------------------
