--- a/index2.html
+++ b/index2.html
@@ -73,10 +73,8 @@ async function regular_fetch() {
 	
 	await fetch(url, options)
 		.then(response => response.json())
-		.then(async function(data) { 
-			console.log('data: ', data);
-		})
-		.catch(error => console.error("error: ", error); );
+		.then(async function(data) { console.log('data: ', data); })
+		.catch(error => console.error("error: ", error));
 
 }
 
