--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 <button id="run_script" onclick="run_script()">run_script</button>
 <button id="regular_fetch" onclick="regular_fetch()">regular_fetch</button>
 <button id="run_selection_w_JSONP" onclick="run_selection_w_JSONP()">run_selection_w_JSONP</button>
-<button id="run_form_GET_request" onclick="run_form_GET_request()" style="display:block">run_form_GET_request</button>
+<button id="run_form_GET_request" onclick="run_form_GET_request()" style="display:block" onsubmit="return checkForm(this)>run_form_GET_request</button>
 <button id="run_selection_w_CORS" onclick="run_selection_w_CORS()">run_selection_w_CORS</button>
 
 	
@@ -189,7 +189,6 @@ async function run_form_GET_request() {
   document.body.appendChild(form);
 	
   form.submit();
-  
 }
 
 // Add an eventlistener to a button, when the button is clicked, do not redirect AND output the form results
@@ -197,6 +196,12 @@ async function run_form_GET_request() {
 document.getElementById("run_form_GET_request").addEventListener("click", (event) => {
 	event.preventDefault();
 });
+
+// The onsubmit ONLY in 'form action' allows one to call a function after the form is submitted
+function checkForm(thisForm){
+	document.getElementById("outData0").innerHTML = "data sent";
+	thisForm.preventDefault();
+}
 	
 // https://nominatim.openstreetmap.org/ui/search.html?place_idvalue%3D0=&licencevalue%3D=&osm_typevalue%3D=&osm_idvalue%3D0=&latvalue%3D=&lonvalue%3D=&classvalue%3D=&typevalue%3D=&place_rankvalue%3D0=&importancevalue%3D0=&addresstypevalue%3D=&namevalue%3D=&display_namevalue%3D=&boundingboxvalue%3D%2C%2C%2C=
 
